W-16688735: Skip journal recovery when there's no journal file